[package]
name = "execdump"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
capstone = "0.14.0"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
itertools = "0.14.0"
ratatui = "0.30.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
toml = "0.9.10"
